<resources>
    <string name="app_name">Plan Podróży</string>
    <string name="hint_place">Miejsce...</string>
    <string name="hint_name">Nazwa...</string>
    <string name="button_save">Zapisz</string>
    <string name="empty_not_saved">Podróż nie zapisana, z powodu pustych pól.</string>
    <string name="planner_empty_not_saved">Plan nie zapisany, z powodu pustych pól.</string>
    <string name="travel_added">Podróż dodano pomyślnie</string>
    <string name="planner_added">Plan dodano pomyślnie</string>
    <string name="data_start">Od..</string>
    <string name="data_end">Do..</string>
    <string name="data">Data..</string>
    <string name="time">Czas..</string>
    <string name="empty_not_maps">Miejsce jest puste.</string>
    <string name="searchEditText">Wpisz lokalizaję tutaj</string>

</resources>
